added styles.css and heading

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>Robert Nixon</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Welcome to my site.</h1>
+    </body>
 
 </html>
