--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
         <title>Robert Nixon</title>
     </head>
     <body>
+        <!-- Navigation -->
+        <nav>
+            <ul>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
         <h1>Welcome to my site.</h1>
     </body>
 
