--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <title>Robert Nixon</title>
+        
+        <link href="styles.css" rel="stylesheet" title="Main Stylesheet">
     </head>
     <body>
         <!-- Navigation -->
         <nav>
-            <ul>
-                <li>Projects</li>
-                <li>Contact</li>
-            </ul>
+            <a class="navigation link" href="projects.html">Projects</a>
+            <a class="navigation link" href="contact.html">Contact</a>
         </nav>
         <h1>Welcome to my site.</h1>
     </body>
