improved link styling

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <!-- Navigation -->
         <nav>
-            <a class="navigation link" href="projects.html">Projects</a>
-            <a class="navigation link" href="contact.html">Contact</a>
+            <a class="navigation-link" href="projects.html">Projects</a>
+            <a class="navigation-link" href="contact.html">Contact</a>
         </nav>
         <h1>Welcome to my site.</h1>
     </body>
