--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
             <a class="navigation-link" href="projects.html">Projects</a>
             <a class="navigation-link" href="contact.html">Contact</a>
         </nav>
-        <h1>Welcome to my site.</h1>
+
+        <!-- Main Content -->
+        <center>
+            <h1>Robert Nixon</h1>
+            <h5>Programmer and Green Polititian</h5>
+        </center>
     </body>
 
 </html>
