added styled footer

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
         </nav>
 
         <!-- Main Content -->
-        <center>
-            <h1>Robert Nixon</h1>
-            <h5>Programmer and Green Polititian</h5>
-        </center>
+        <main class="main-content">
+            <center>
+                <h1>Robert Nixon</h1>
+                <h5>Programmer and Green Polititian</h5>
+            </center>
+        </main>
+
+        <!-- Footer -->
+        <footer>
+            Follow on Github
+        </footer>
     </body>
 
 </html>
