--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
         </nav>
 
         <!-- Main Content -->
+        <main class="main-content">
+            <center>
+                <h1>Contact Me</h1>
+            </center>
+        </main>
 
     </body>
 
