--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title>Robert Nixon</title>
         
         <link href="styles.css" rel="stylesheet" title="Main Stylesheet">
+
+        <!-- Github follow button script -->
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
     <body>
         <!-- Navigation -->
@@ -16,13 +19,22 @@
         <main class="main-content">
             <center>
                 <h1>Robert Nixon</h1>
-                <h5>Programmer and Green Polititian</h5>
+                <h5></h5>
             </center>
         </main>
 
         <!-- Footer -->
         <footer>
-            Follow on Github
+            <div class=".footer-content-container">
+                <p>Follow on Github</p>
+                <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
+            </div>
+            <div class=".footer-content-container">
+                <p>Follow on Twitter</p>
+            </div>
+            <div class=".footer-content-container">
+                <p>
+            </div>
         </footer>
     </body>
 
