--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,10 @@
     <head>
         <title>Robert Nixon</title>
         
+        <!-- Add Google Roboto font -->
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
+        <!-- Link main stylesheet -->
         <link href="styles.css" rel="stylesheet" title="Main Stylesheet">
     </head>
     <body>
