moved to using the new css grid

--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
         <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
     <body>
+
+        <!-- Heading -->
+        <header>
+            <h1>Robert Nixon</h1>
+        </header>
+
         <!-- Navigation -->
         <nav>
-            <a class="navigation-link" href="index.html">Home</a>
-            <a class="navigation-link" href="projects.html">Projects</a>
-            <a class="navigation-link" href="contact.html">Contact</a>
+            <ul class="nav-list">
+                <li class="nav-list-item"><a class="navigation-link" href="index.html">Home</a></li>
+                <li class="nav-list-item"><a class="navigation-link" href="projects.html">Projects</a></li>
+                <li class="nav-list-item"><a class="navigation-link" href="contact.html">Contact</a></li>
+            </ul>
         </nav>
 
         <!-- Main Content -->
         <main class="main-content">
-            <center>
-                <h1>Robert Nixon</h1>
-                <h5></h5>
-            </center>
+            <p>content goes here</p>
         </main>
 
         <!-- Footer -->
