added politics page and a bit more content to homepage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
         <!-- Heading -->
         <header>
-            <h1>Robert Nixon</h1>
+            <center>
+                <h1>Robert Nixon</h1>
+                <h4>Programmer and Green Party Politician</h4>
+            </center>
         </header>
 
         <!-- Navigation -->
@@ -23,13 +26,22 @@
             <ul class="nav-list">
                 <li class="nav-list-item"><a class="navigation-link" href="index.html">Home</a></li>
                 <li class="nav-list-item"><a class="navigation-link" href="projects.html">Projects</a></li>
+                <li class="nav-list-item"><a class="navigation-link" href="politics.html">Politics</a></li>
                 <li class="nav-list-item"><a class="navigation-link" href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <!-- Main Content -->
         <main class="main-content">
-            <p>content goes here</p>
+            <h2>About</h2>
+
+            <h2>Experience</h2>
+
+            <h2>Technical Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
         </main>
 
         <!-- Footer -->
@@ -40,11 +52,8 @@
             </div>
             <div class=".footer-content-container">
                 <p>Follow on Twitter</p>
-            </div>
-            <div class=".footer-content-container">
-                <p>
+                <a href="https://twitter.com/robertnixongp" class="twitter-follow-button" data-show-count="false">Follow @robertnixongp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </footer>
     </body>
-
 </html>
