--- a/projects.html
+++ b/projects.html
@@ -7,25 +7,53 @@
 
         <!-- Link main stylesheet -->
         <link href="styles.css" rel="stylesheet" title="Main Stylesheet">
+
+        <!-- Github follow button script -->
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
     <body>
+
+        <!-- Heading -->
+        <header>
+            <center>
+                <h1>Robert Nixon</h1>
+                <h4>Programmer and Green Party Politician</h4>
+            </center>
+        </header>
+
         <!-- Navigation -->
         <nav>
-            <a class="navigation-link" href="index.html">Home</a>
-            <a class="navigation-link" href="projects.html">Projects</a>
-            <a class="navigation-link" href="contact.html">Contact</a>
+            <ul class="nav-list">
+                <li class="nav-list-item"><a class="navigation-link" href="index.html">Home</a></li>
+                <li class="nav-list-item"><a class="navigation-link" href="projects.html">Projects</a></li>
+                <li class="nav-list-item"><a class="navigation-link" href="politics.html">Politics</a></li>
+                <li class="nav-list-item"><a class="navigation-link" href="contact.html">Contact</a></li>
+            </ul>
         </nav>
 
         <!-- Main Content -->
         <main class="main-content">
-            <center>
-                <h1>My Projects</h1>
-            </center>
-            <div class="body-content-container">
-                <h2 class="content-heading">Computing Tutor</h2>
-                <p></p>
-            </div>
-        </main>
-    </body>
+            <h2>About</h2>
 
+            <h2>Experience</h2>
+
+            <h2>Technical Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+        </main>
+
+        <!-- Footer -->
+        <footer>
+            <div class=".footer-content-container">
+                <p>Follow on Github</p>
+                <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
+            </div>
+            <div class=".footer-content-container">
+                <p>Follow on Twitter</p>
+                <a href="https://twitter.com/robertnixongp" class="twitter-follow-button" data-show-count="false">Follow @robertnixongp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </footer>
+    </body>
 </html>
