added some page specific content

--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,11 @@
 
         <!-- Main Content -->
         <main class="main-content">
-            <h2>About</h2>
-
-            <h2>Experience</h2>
-
-            <h2>Technical Skills</h2>
+            <h2>Contact Me</h2>
+            <p>Contact me about matters relating to the Green Party:</p>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
+                <li>Email: robertnixon@northoxfordshiregreenparty.org.uk</li>
+                <li>Twitter: @robertnixongp</li>
             </ul>
         </main>
 
