--- a/politics.html
+++ b/politics.html
@@ -33,15 +33,7 @@
 
         <!-- Main Content -->
         <main class="main-content">
-            <h2>About</h2>
-
-            <h2>Experience</h2>
-
-            <h2>Technical Skills</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul>
+            <h2>Politics</h2>
         </main>
 
         <!-- Footer -->
