added technical skills

--- a/index.html
+++ b/index.html
@@ -41,7 +41,28 @@
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>Javascript</li>
+                <li>JQuery</li>
+                <li>MySQL</li>
+                <li>Python</li>
+                <li>Java</li>
             </ul>
+            <h3>Tools</h3>
+            <ul>
+                <li>Visual Studio Code</li>
+                <li>Pycharm</li>
+                <li>phpMyAdmin</li>
+                <li>Netbeans</li>
+                <li>Git/Github</li>
+                <li>Android Studio</li>
+            </ul>
+            <h3>Operating Systems</h3>
+            <ul>
+                <li>Linux (Ubuntu)</li>
+                <li>Windows</li>
+            </ul>
+            <p>Currently I do most of my development work on Linux, however I have experience writing software on Windows as well.</p>
+
         </main>
 
         <!-- Footer -->
