styled skills added first project

--- a/politics.html
+++ b/politics.html
@@ -37,7 +37,7 @@
         </main>
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer-container">
             <div class=".footer-content-container">
                 <p>Follow on Github</p>
                 <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
