--- a/projects.html
+++ b/projects.html
@@ -34,10 +34,18 @@
         <!-- Main Content -->
         <main class="main-content">
             <h2>Projects</h2>
+            <div class="project-container">
+                <h3 class="project-heading"><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website containing free tutorial videos for learning computer science.</i></h3>
+                <p>I started this project in July 2016 as part of my level 3 extended project qualification.<br><br> 
+                The idea came from my experience revising for Computer Science exams. When revising it became apparent that there wasn&apos;t many good quality websites teaching the content that GCSE and A Level students need to know. I decided to fill this gap in the market with video tutorials showing students how to get full marks on actual exam questions.
+                The site also provides general tutorials on different Computer Science topics (including programming tutorials) that should appeal to anyone wanting to learn about Computer Science.<br><br>
+                You can view some of my video tutorials below:<br></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=UUbifK_4L6XrfcfIB7rI4vDA" frameborder="0" allowfullscreen></iframe>
+            </div>
         </main>
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer-container">
             <div class=".footer-content-container">
                 <p>Follow on Github</p>
                 <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
