--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         </main>
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer-container">
             <div class=".footer-content-container">
                 <p>Follow on Github</p>
                 <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
