--- a/index.html
+++ b/index.html
@@ -36,37 +36,45 @@
             <h2>About</h2>
 
             <h2>Experience</h2>
-
             <h2>Technical Skills</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-                <li>JQuery</li>
-                <li>MySQL</li>
-                <li>Python</li>
-                <li>Java</li>
-            </ul>
-            <h3>Tools</h3>
-            <ul>
-                <li>Visual Studio Code</li>
-                <li>Pycharm</li>
-                <li>phpMyAdmin</li>
-                <li>Netbeans</li>
-                <li>Git/Github</li>
-                <li>Android Studio</li>
-            </ul>
-            <h3>Operating Systems</h3>
-            <ul>
-                <li>Linux (Ubuntu)</li>
-                <li>Windows</li>
-            </ul>
-            <p>Currently I do most of my development work on Linux, however I have experience writing software on Windows as well.</p>
-
+            <div class="tech-skills">
+                <div class="skills">
+                    <h3>Languages</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>JQuery</li>
+                        <li>SQL</li>
+                        <li>Python</li>
+                        <li>Java</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>Pycharm</li>
+                        <li>phpMyAdmin</li>
+                        <li>MySQL</li>
+                        <li>Netbeans</li>
+                        <li>Git/Github</li>
+                        <li>Android Studio</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <h3>Operating Systems</h3>
+                    <ul>
+                        <li>Linux (Ubuntu)</li>
+                        <li>Windows</li>
+                    </ul>
+                    <p>Currently I do most of my development work on Linux, however I have experience writing software on Windows as well.</p>
+                </div>
+            </div>
         </main>
 
         <!-- Footer -->
-        <footer>
+        <footer class="footer-container">
             <div class=".footer-content-container">
                 <p>Follow on Github</p>
                 <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
