made space for content bigger. Added space for project links

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <h2>About</h2>
 
             <h2>Experience</h2>
+
+            <!-- Technical Skills -->
             <h2>Technical Skills</h2>
             <div class="tech-skills">
                 <div class="skills">
@@ -68,9 +70,14 @@
                         <li>Linux (Ubuntu)</li>
                         <li>Windows</li>
                     </ul>
-                    <p>Currently I do most of my development work on Linux, however I have experience writing software on Windows as well.</p>
+                    <p>Currently I do most of my development work on Linux,<br> however I have experience writing software on Windows as well.</p>
                 </div>
             </div>
+
+            <h2>Education</h2>
+            <h3>GCSE</h3>
+            <p>11 GCSEs A*-B</p>
+
         </main>
 
         <!-- Footer -->
