improved styling on projects page

--- a/projects.html
+++ b/projects.html
@@ -49,14 +49,17 @@
                     <div class="project-link-container">
                         <a href="https://computingtutor.net" class="project-link">Computing Tutor Site</a>
                     </div>
-                    <div class="project-link">
+                    <div class="project-link-container">
                         <a href="https://twitter.com/TheCompSciTutor" class="twitter-follow-button" data-show-count="false">Follow @TheCompSciTutor</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="project-link-container">
+                        <a class="github-button" href="https://github.com/ComputingTutor" data-style="mega" aria-label="Follow @ComputingTutor on GitHub">Check out @ComputingTutor on Github</a>
                     </div>
                 </div>
             </div>
 
         </main>
-
+        <hr>
         <!-- Footer -->
         <footer class="footer-container">
             <div class=".footer-content-container">
