--- a/index.html
+++ b/index.html
@@ -75,8 +75,40 @@
             </div>
 
             <h2>Education</h2>
-            <h3>GCSE</h3>
-            <p>11 GCSEs A*-B</p>
+            <div class="education">
+                <div class="qualifications">
+                    <h3>GCSE</h3>
+                    <p>11 GCSEs A*-B</p>
+                    <li>Computer Science</li>
+                    <li>Religious Studies</li>
+                    <li>Methods in Mathematics</li>
+                    <li>Applications of Mathematics</li>
+                    <li>Engineering</li>
+                    <li>Physics</li>
+                    <li>Chemistry</li>
+                    <li>Biology</li>
+                    <li>Geography</li>
+                    <li>English Language</li>
+                    <li>English Literature</li>
+                </div>
+                <div class="qualifications">
+                    <h3>AS-Level</h3>
+                    <ul>
+                        <li>Computer Science</li>
+                        <li>Mathematics</li>
+                        <li>Further Mathematics</li>
+                        <li>Physics</li>
+                    </ul>
+                </div>
+                <div class="qualifications">
+                    <h3>A-Level</h3>
+                    <ul>
+                        <li>Computer Science</li>
+                        <li>Mathematics</li>
+                        <li>Physics</li>
+                    </ul>
+                </div>
+            </div>
 
         </main>
 
