--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,10 @@
         <!-- Main Content -->
         <main class="main-content">
 
-            <!-- Computing Tutor Project -->
+            
             <h2>Projects</h2>
+
+            <!-- Computing Tutor Project -->
             <div class="project-container">
                 <h3 class="project-heading"><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website containing free tutorial videos for learning computer science.</i></h3>
                 <p>I started this project in July 2016 as part of my level 3 extended project qualification.<br><br> 
@@ -57,6 +59,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Portfolio Site -->
 
         </main>
         <hr>
