imporved link styling and added NOGP to experience

--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
         <!-- Main Content -->
         <main class="main-content">
             <h2>About</h2>
+            <p></p>
 
             <h2>Experience</h2>
-
+            <div class="content-container">
+                <h3 class="content-heading"><a href="https://northoxfordshiregreenparty.org.uk">North Oxfordshire Green Party</a> - Cherwell, <i> Vice Chair and Website Developer </i></h3>
+                <h6 class="content-heading">August 2015 - Present</h6>
+            </div>
             <!-- Technical Skills -->
             <h2>Technical Skills</h2>
             <div class="tech-skills">
