added develop 1 to experience

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <h3 class="content-heading"><a href="https://northoxfordshiregreenparty.org.uk">North Oxfordshire Green Party</a> - Cherwell, <i> Vice Chair and Website Developer </i></h3>
                 <h6 class="content-heading">August 2015 - Present</h6>
             </div>
+            <br>
+            <div class="content-container">
+                <h3 class="content-heading"><a href="https://www.develop1.net">Develop 1 Limited</a> - Bicester</h3>
+                <h6 class="content-heading">July 2016</h6>
+            </div>
             <!-- Technical Skills -->
             <h2>Technical Skills</h2>
             <div class="tech-skills">
