fixed styling of links

--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
         <!-- Navigation -->
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="navigation-link" href="index.html">Home</a></li>
-                <li class="nav-list-item"><a class="navigation-link" href="projects.html">Projects</a></li>
-                <li class="nav-list-item"><a class="navigation-link" href="politics.html">Politics</a></li>
-                <li class="nav-list-item"><a class="navigation-link" href="contact.html">Contact</a></li>
+                <li class="nav-list-item"><a class="button-link" href="index.html">Home</a></li>
+                <li class="nav-list-item"><a class="button-link" href="projects.html">Projects</a></li>
+                <li class="nav-list-item"><a class="button-link" href="politics.html">Politics</a></li>
+                <li class="nav-list-item"><a class="button-link" href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
