--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,10 @@
         <!-- Navigation -->
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="navigation-link" href="index.html">Home</a></li>
-                <li class="nav-list-item"><a class="navigation-link" href="projects.html">Projects</a></li>
-                <li class="nav-list-item"><a class="navigation-link" href="politics.html">Politics</a></li>
-                <li class="nav-list-item"><a class="navigation-link" href="contact.html">Contact</a></li>
+                <li class="nav-list-item"><a class="button-link" href="index.html">Home</a></li>
+                <li class="nav-list-item"><a class="button-link" href="projects.html">Projects</a></li>
+                <li class="nav-list-item"><a class="button-link" href="politics.html">Politics</a></li>
+                <li class="nav-list-item"><a class="button-link" href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -49,7 +49,7 @@
                 <h4>Computing Tutor around the web</h4>
                 <div class="content-links-container">
                     <div class="content-link-container">
-                        <a href="https://computingtutor.net" class="project-link">Computing Tutor Site</a>
+                        <a href="https://computingtutor.net" class="button-link">Computing Tutor Site</a>
                     </div>
                     <div class="content-link-container">
                         <a href="https://twitter.com/TheCompSciTutor" class="twitter-follow-button" data-show-count="false">Follow @TheCompSciTutor</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
