--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
         <!-- Navigation -->
         <nav>
+            <div class="hamburger-menu">
+                <div class="burger-bar-1"></div>
+                <div class="burger-bar-2"></div>
+                <div class="burger-bar-3"></div>
+            </div>
             <ul class="nav-list">
                 <li class="nav-list-item"><a class="button-link" href="index.html">Home</a></li>
                 <li class="nav-list-item"><a class="button-link" href="projects.html">Projects</a></li>
