added info to readme

--- a/index.html
+++ b/index.html
@@ -33,125 +33,8 @@
         <ul>
             <li><a href="projects.html">Personal Projects</li></a>
             <li><a href="experience.html">Experience</li></a>
+            <li><a href="education.html">Education</li></a>
             <li><a href="politics.html">Politics</li></a>
         </ul>
-
-        <!--
-        <header>
-            <center>
-                <h1>Robert Nixon</h1>
-                <h4>Programmer and Green Party Politician</h4>
-            </center>
-        </header>
-
-        <nav>
-            <a id="menu" href="#"><span></span></a>
-            <ul class="nav-list">
-                <li class="nav-list-item"><a class="button-link" href="index.html">Home</a></li>
-                <li class="nav-list-item"><a class="button-link" href="projects.html">Projects</a></li>
-                <li class="nav-list-item"><a class="button-link" href="politics.html">Politics</a></li>
-                <li class="nav-list-item"><a class="button-link" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-        <main class="main-content">
-            <h2>About</h2>
-            <p></p>
-
-            <h2>Experience</h2>
-            <div class="content-container">
-                <h3 class="content-heading"><a href="https://northoxfordshiregreenparty.org.uk">North Oxfordshire Green Party</a> - Cherwell, <i> Vice Chair and Website Developer </i></h3>
-                <h6 class="content-heading">August 2015 - Present</h6>
-            </div>
-            <br>
-            <div class="content-container">
-                <h3 class="content-heading"><a href="https://www.develop1.net">Develop 1 Limited</a> - Bicester</h3>
-                <h6 class="content-heading">July 2016</h6>
-            </div>
-            <h2>Technical Skills</h2>
-            <div class="tech-skills">
-                <div class="skills">
-                    <h3>Languages</h3>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascript</li>
-                        <li>JQuery</li>
-                        <li>SQL</li>
-                        <li>Python</li>
-                        <li>Java</li>
-                    </ul>
-                </div>
-                <div class="skills">
-                    <h3>Tools</h3>
-                    <ul>
-                        <li>Visual Studio Code</li>
-                        <li>Pycharm</li>
-                        <li>phpMyAdmin</li>
-                        <li>MySQL</li>
-                        <li>Netbeans</li>
-                        <li>Git/Github</li>
-                        <li>Android Studio</li>
-                    </ul>
-                </div>
-                <div class="skills">
-                    <h3>Operating Systems</h3>
-                    <ul>
-                        <li>Linux (Ubuntu)</li>
-                        <li>Windows</li>
-                    </ul>
-                    <p>Currently I do most of my development work on Linux,<br> however I have experience writing software on Windows as well.</p>
-                </div>
-            </div>
-
-            <h2>Education</h2>
-            <div class="education">
-                <div class="qualifications">
-                    <h3>GCSE</h3>
-                    <p>11 GCSEs A*-B</p>
-                    <li>Computer Science</li>
-                    <li>Religious Studies</li>
-                    <li>Methods in Mathematics</li>
-                    <li>Applications of Mathematics</li>
-                    <li>Engineering</li>
-                    <li>Physics</li>
-                    <li>Chemistry</li>
-                    <li>Biology</li>
-                    <li>Geography</li>
-                    <li>English Language</li>
-                    <li>English Literature</li>
-                </div>
-                <div class="qualifications">
-                    <h3>AS-Level</h3>
-                    <ul>
-                        <li>Computer Science</li>
-                        <li>Mathematics</li>
-                        <li>Further Mathematics</li>
-                        <li>Physics</li>
-                    </ul>
-                </div>
-                <div class="qualifications">
-                    <h3>A-Level</h3>
-                    <ul>
-                        <li>Computer Science</li>
-                        <li>Mathematics</li>
-                        <li>Physics</li>
-                    </ul>
-                </div>
-            </div>
-
-        </main>
-
-        <footer class="footer-container">
-            <div class=".footer-content-container">
-                <p>Follow on Github</p>
-                <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
-            </div>
-            <div class=".footer-content-container">
-                <p>Follow on Twitter</p>
-                <a href="https://twitter.com/robertnixongp" class="twitter-follow-button" data-show-count="false">Follow @robertnixongp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </footer>
-        -->
     </body>
 </html>
