updated projects page with sakura and updated computing tutor entry

--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
     <head>
-        <title>Robert Nixon</title>
+        <title>Robert Nixon - Home</title>
         <!-- Link to sakura -->
         <link rel="stylesheet" href="css/sakura.css" type="text/css">
-
-        <!-- Github follow button script -->
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
     <body>
         <a href="index.html"><h1>Robert Nixon</h1></a>
