--- a/projects.html
+++ b/projects.html
@@ -1,79 +1,28 @@
 <html>
     <head>
-        <title>Robert Nixon</title>
-        
-        <!-- Add Google Roboto font -->
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-
-        <!-- Link main stylesheet -->
-        <link href="styles.css" rel="stylesheet" title="Main Stylesheet">
-
-        <!-- Github follow button script -->
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <title>Robert Nixon - Projects</title>
+        <!-- Link to sakura -->
+        <link rel="stylesheet" href="css/sakura.css" type="text/css">
     </head>
     <body>
+    <a href="index.html"><h1>Robert Nixon</h1></a>
+    <h2>Projects</h2>
 
-        <!-- Heading -->
-        <header>
-            <center>
-                <h1>Robert Nixon</h1>
-                <h4>Programmer and Green Party Politician</h4>
-            </center>
-        </header>
+    <!-- Computing Tutor Project -->
+    <h3 class="content-heading"><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website providing free tutorial videos for learning computer science.</i></h3>
+    <p>I started this project in July 2016 as part of my level 3 extended project qualification.<br><br> 
+    The idea came from my experience revising for Computer Science exams. When revising it became apparent that there wasn&apos;t many good quality websites teaching the content that GCSE and A Level students need to know. I decided to create Computing Tutor to help computer science students who find video tutorials a useful way to learn.
+    The site also provides general tutorials on different Computer Science topics (including programming tutorials) that should appeal to anyone wanting to learn about Computer Science even if they&apos;re not taking a GCSE or A-Level qualification.<br></p>
 
-        <!-- Navigation -->
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-list-item"><a class="button-link" href="index.html">Home</a></li>
-                <li class="nav-list-item"><a class="button-link" href="projects.html">Projects</a></li>
-                <li class="nav-list-item"><a class="button-link" href="politics.html">Politics</a></li>
-                <li class="nav-list-item"><a class="button-link" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-        <!-- Main Content -->
-        <main class="main-content">
-
-            
-            <h2>Projects</h2>
-
-            <!-- Computing Tutor Project -->
-            <div class="content-container">
-                <h3 class="content-heading"><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website containing free tutorial videos for learning computer science.</i></h3>
-                <p>I started this project in July 2016 as part of my level 3 extended project qualification.<br><br> 
-                The idea came from my experience revising for Computer Science exams. When revising it became apparent that there wasn&apos;t many good quality websites teaching the content that GCSE and A Level students need to know. I decided to fill this gap in the market with video tutorials showing students how to get full marks on actual exam questions.
-                The site also provides general tutorials on different Computer Science topics (including programming tutorials) that should appeal to anyone wanting to learn about Computer Science.<br></p>
-
-                <p>You can view some of my video tutorials below:</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=UUbifK_4L6XrfcfIB7rI4vDA" frameborder="0" allowfullscreen></iframe>
-                <h4>Computing Tutor around the web</h4>
-                <div class="content-links-container">
-                    <div class="content-link-container">
-                        <a href="https://computingtutor.net" class="button-link">Computing Tutor Site</a>
-                    </div>
-                    <div class="content-link-container">
-                        <a href="https://twitter.com/TheCompSciTutor" class="twitter-follow-button" data-show-count="false">Follow @TheCompSciTutor</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                    </div>
-                    <div class="content-link-container">
-                        <a class="github-button" href="https://github.com/ComputingTutor" data-style="mega" aria-label="Follow @ComputingTutor on GitHub">Check out @ComputingTutor on Github</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Portfolio Site -->
-
-        </main>
-        <hr>
-        <!-- Footer -->
-        <footer class="footer-container">
-            <div class=".footer-content-container">
-                <p>Follow on Github</p>
-                <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
-            </div>
-            <div class=".footer-content-container">
-                <p>Follow on Twitter</p>
-                <a href="https://twitter.com/robertnixongp" class="twitter-follow-button" data-show-count="false">Follow @robertnixongp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </footer>
+    <p>You can view some of my video tutorials below:</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=UUbifK_4L6XrfcfIB7rI4vDA" frameborder="0" allowfullscreen></iframe>
+    <h4>Computing Tutor around the web</h4>
+    <ul>
+        <li>Website - <a href="https://computingtutor.net">computingtutor.net</a></li>
+        <li>Twitter - <a href="https://twitter.com/TheCompSciTutor">@TheCompSciTutor</a></li>
+        <li>Facebook - <a href="https://fb.me/thecomputingtutor">@thecomputingtutor</a></li>
+        <li><a href="https://github.com/computingtutor">Github</a></li>
+        <li><a href="https://computingtutor.blogspot.co.uk/">Blog</a></li>
+    </ul>
     </body>
 </html>
