deleted redundent assets, added sitenav to projects page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li>Personal Twitter - <a href="https://twitter.com/robertnixongp">@robertnixongp</a></li>
             <li>Github - <a href="https://github.com/robnixon">@robnixon</a></li>
         </ul>
+
+        <!-- Site Nav -->
         <h2>Site Contents</h2>
         <ul>
             <li><a href="projects.html">Personal Projects</li></a>
