--- a/projects.html
+++ b/projects.html
@@ -24,5 +24,14 @@
         <li><a href="https://github.com/computingtutor">Github</a></li>
         <li><a href="https://computingtutor.blogspot.co.uk/">Blog</a></li>
     </ul>
+    
+    <!-- Site Nav -->
+    <h2>Site Contents</h2>
+        <ul>
+            <li><a href="projects.html">Personal Projects</li></a>
+            <li><a href="experience.html">Experience</li></a>
+            <li><a href="education.html">Education</li></a>
+            <li><a href="politics.html">Politics</li></a>
+        </ul>
     </body>
 </html>
