added experience page

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <h2>Projects</h2>
     <hr>
     <!-- Computing Tutor Project -->
-    <h3 class="content-heading"><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website providing free tutorial videos for learning computer science.</i></h3>
+    <h3><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website providing free tutorial videos for learning computer science.</i></h3>
     <p>I started this project in July 2016 as part of my level 3 extended project qualification.<br><br> 
     The idea came from my experience revising for Computer Science exams. When revising it became apparent that there wasn&apos;t many good quality websites teaching the content that GCSE and A Level students need to know. I decided to create Computing Tutor to help computer science students who find video tutorials a useful way to learn.
     The site also provides general tutorials on different Computer Science topics (including programming tutorials) that should appeal to anyone wanting to learn about Computer Science even if they&apos;re not taking a GCSE or A-Level qualification.<br></p>
